host-setup/iptables.rules
*nat
-A POSTROUTING -s 10.0.0.0/8 ! -d 10.0.0.0/8 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 10.0.0.0/8 ! -d 10.0.0.0/8 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 10.0.0.0/8 ! -d 10.0.0.0/8 -j MASQUERADE
COMMIT

*filter
-P INPUT ACCEPT
-P OUTPUT ACCEPT
-P FORWARD ACCEPT

-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -s 127.0.0.1 -j REJECT
-A INPUT ! -i lo -d 127.0.0.1 -j REJECT

# Rules for the host machine only
## Allow Ping, SSH and established connections
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp --icmp-type 8 -j ACCEPT 
-A INPUT -p tcp --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-port-unreachable

# internal & external bridge:
## Rules in the forward chain affect
##  - internet -> VM public    (-i br0 -o br0 --physdev-in eth0)
##  - VM public  -> internet   (-i br0 -o br0 --physdev-out eth0)
##  - VM public  -> VM public  (-i br0 -o br0 ! --physdev-in eth0 ! --physdev-out eth0)
##  - VM private -> VM private (-i br1 -o br1)
##  - VM private -> VM public  (-i br1 -o br0 ! --physdev-out eth0)
##  - VM private -> internet   (-i br1 -o br0 --physdev-out eth0)
## Note that connections initiated by a host to a VM on the same box
## are exempt (pass through OUTPUT chain, not FORWARD).

-A FORWARD -m physdev --physdev-is-bridged --physdev-in eth0 --physdev-out eth0 -j DROP

## Always allow Ping, SSH, established connections
-A FORWARD -m state --state ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -p icmp --icmp-type 8 -j ACCEPT 
-A FORWARD -p tcp --dport 22 -m state --state NEW -j ACCEPT

## Don't restrict internal-internal
-A FORWARD -i br1 -o br1 -j ACCEPT

## Let VM public and VM private initiate connections to hosts on the internet
### (Note that both rules are necessary for VM private)
-A FORWARD -m physdev --physdev-is-bridged --physdev-out eth0 -m state --state NEW -j ACCEPT
-A FORWARD -i br1 -o br0 -m state --state NEW -j ACCEPT

## Allow HTTP to public VMs (from the world, other public VMs & other private VMs)
### (Also allows new HTTP conns to hosts on the internet; irrelevant)
-A FORWARD -o br0 -p tcp --dport 80 -m state --state NEW -j ACCEPT

-A FORWARD -j REJECT --reject-with icmp-port-unreachable

COMMIT
